--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <title>React App</title>
   </head>
-  <body>
+  <body class="page__body">
     <div id="root"></div>
   </body>
 </html>
