--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./styles/main.scss">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta http-equiv="Permissions-Policy" conent="interest-cohort=()"/>
     <title>React App</title>
   </head>
   <body class="page__body">
